# tesi-uafx

./: .gitignore  CMakeLists.txt  sync.sh
experiments/discovery_fx/: CMakeLists.txt  client_lds.c  server.c
experiments/framework/backend/: Makefile  browse.c  browse.h  cm_test.c  connection_io.c  connection_io.h  connection_manager.c  connection_manager.h  discovery.c  helpers.c  helpers.h  http_server.c  http_server.h  main.c  model.c  model.h  modifiche_da_apportare.txt  serialize.c  serialize.h  tde.c
experiments/framework/frontend/uafx-frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
experiments/framework/frontend/uafx-frontend/src/: App.jsx
experiments/framework/frontend/uafx-frontend/src/api/: client.js
experiments/framework/frontend/uafx-frontend/src/components/: ConnectionDetailPanel.jsx  ConnectionDialog.jsx  DetailPanel.jsx  GdsConfigDialog.jsx  LoadingOverlay.jsx  TabBar.jsx  Toolbar.jsx
experiments/framework/frontend/uafx-frontend/src/nodes/: FunctionalEntityNode.jsx  PhantomNode.jsx  SwitchNode.jsx  UafxServerNode.jsx
experiments/framework/frontend/uafx-frontend/src/screens/: TopologyScreen.jsx  WelcomeScreen.jsx
experiments/framework/frontend/uafx-frontend/src/styles/: index.css
experiments/framework/frontend/uafx-frontend/src/utils/: layout.js  transform.js
experiments/framework/server/: CMakeLists.txt  cli.c  cli.h  establish_connection.c  establish_connection.h  lds_server.c  pub_test.c  rt_functions.c  sks_helpers.c  sks_helpers.h  sks_server.c  sub_test.c  uafx_common.c  uafx_common.h  uafx_temperature_server.c
experiments/framework/server/sks/: README.md  cli.h  pub_test.c  rt_functions.h  sub_test.c
experiments/framework/uafx-kathara/: Dockerfile  lds_khatara_pathc.c
experiments/framework/uafx-kathara/lab2/: lab.conf  node1.startup  node2.startup
experiments/framework/uafx-kathara/lab2/shared/: build_backend_in_container.sh  build_lds_in_container.sh
experiments/lds_discovery/client/: Makefile  browse.c  browse.h  common.h  discovery.h  helpers.h  link_builder.c  link_builder.h  main.c  model.c  model.h  tde.c  tde.h
experiments/lds_discovery/server/: density_server.c  server_with_lds_reg.c  temp_server.c
lib/: open62541.h
lib/uafx_types/: CMakeCache.txt  Makefile  build_in_container.sh  build_temp_server.sh  cmake_install.cmake  my_uafx_model.c  my_uafx_model.h  types_di_generated.c  types_di_generated.h  types_di_generated_handling.h  types_uafx_ac_generated.c  types_uafx_ac_generated.h  types_uafx_ac_generated_handling.h  types_uafx_data_generated.c  types_uafx_data_generated.h  types_uafx_data_generated_handling.h
scripts/: call_start.py  client_opcua.py  lds_request.py  list_fxroot.py
